# health-talent-spot-api

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  fly.toml  main.cpp  main.py
docs/: requirements.txt
src/: main.cpp
